--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">PopularMovies</string>
-    <string name="api_key">Insert-your-key-here</string>
+    <string name="app_name">Pop Movies</string>
+    <string name="api_key">Enter-your-key-here</string>
     <string name="error_detail">Unable to load, please try again later</string>
 
 </resources>
