--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,20 @@
 <resources>
     <string name="app_name">Pop Movies</string>
-    <string name="api_key">Enter-your-key-here</string>
+
+    <!--Replace the string value with the api key here-->
+    <string name="api_key">Enter-your-api-key-here</string>
+
     <string name="error_detail">Unable to load, please try again later</string>
+    <string name="title_activity_settings">Settings</string>
+    <string name="settings">Settings</string>
+
+    <string name="sort_order_title">Sort by</string>
+    <string name="sort_by_popularity_label">Most Popular</string>
+    <string name="sort_by_rating_label">Top Rating</string>
+
+    <string name="sort_order_pref_key" translatable="false">sort_order_key</string>
+    <string name="sort_by_popularity_value" translatable="false">popularity</string>
+    <string name="sort_by_rating_value" translatable="false">rating</string>
+
 
 </resources>
