Added code to display list of trailers and reviews in the movie detail activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,8 @@
     <string name="connection_error">Unable to connect, please check your internet connection</string>
     <string name="image_content_description">Movie poster image</string>
 
+    <string name="reviews">Reviews</string>
+    <string name="trailers">Trailers</string>
+    <string name="author">Written by %s</string>
 
 </resources>
