--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="author">Written by %s</string>
     <string name="mark_as_favorite">Mark as \nfavorite</string>
     <string name="remove_from_favorites">Remove from \nfavorites</string>
+    <string name="no_data">No data available</string>
 
 </resources>
