--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="error_detail">Unable to load, please try again later</string>
     <string name="title_activity_settings">Settings</string>
     <string name="settings">Settings</string>
+    <string name="share">Share</string>
 
     <string name="sort_order_title">Sort by</string>
     <string name="sort_by_popularity_label">Most Popular</string>
@@ -17,6 +18,8 @@
     <string name="sort_by_popularity_value" translatable="false">popularity</string>
     <string name="sort_by_rating_value" translatable="false">rating</string>
     <string name="sort_by_favorites_value" translatable="false">favorites</string>
+    <string name="youtube_url_prefix" translatable="false">"http://www.youtube.com/watch?v="</string>
+
     <string name="connection_error">Unable to connect, please check your internet connection</string>
     <string name="marked_as_favorite">Marked as favorite</string>
     <string name="removed_from_favorites">Removed from favorites</string>
@@ -28,5 +31,6 @@
     <string name="mark_as_favorite">Mark as \nfavorite</string>
     <string name="remove_from_favorites">Remove from \nfavorites</string>
     <string name="no_data">No data available</string>
+
 
 </resources>
