Addressed lint warnings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,6 @@
     <!--Replace the string value with the api key here-->
     <string name="api_key" translatable="false">Enter-your-api-key-here</string>
 
-    <string name="error_detail">Unable to load, please try again later</string>
     <string name="title_activity_settings">Settings</string>
     <string name="settings">Settings</string>
     <string name="share">Share</string>
@@ -31,6 +30,7 @@
     <string name="mark_as_favorite">Mark as \nfavorite</string>
     <string name="remove_from_favorites">Remove from \nfavorites</string>
     <string name="no_data">No data available</string>
+    <string name="play_trailer_button">Play trailer button</string>
 
 
 </resources>
